Fix for interpolation

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1913,6 +1913,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open('./Properties_table.json','r',encoding='utf-8') as file:\n",
+    "    properties=json.load(file)\n",
+    "\n",
+    "from interpolation import Interp\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(properties['air'])\n",
+    "\n",
+    "fun=Interp(Xaxis=df['temp'].to_list(),Yaxis=df['conductivity'].to_list())\n",
+    "\n",
+    "k=fun.newton_interpol([100])[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.34"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
